src/mermaid/ascii/packet/snapshots/veol__mermaid__ascii__packet__render__tests__render_field_spanning_rows.snap
---
source: src/mermaid/ascii/packet/render.rs
expression: render_str(src)
---
 bits  0               8              16              24            31
      ┌───────────────────────────────┬───────────────────────────────┐
0-31  │              A                │              B                │
      ├───────────────────────────────┴───────────────────────────────┤
32-63 │                          Big Field                            │
      └───────────────────────────────────────────────────────────────┘
