src/mermaid/ascii/packet/snapshots/veol__mermaid__ascii__packet__render__tests__render_with_title.snap
---
source: src/mermaid/ascii/packet/render.rs
expression: render_str(src)
---
TCP Packet

bits  0               8              16              24            31
     ┌───────────────────────────────┬───────────────────────────────┐
0-31 │         Source Port           │       Destination Port        │
     └───────────────────────────────┴───────────────────────────────┘
